修复多个FileProvider的情况下，清单文件合并出错的问题

--- a/androidautoupdate/src/main/AndroidManifest.xml
+++ b/androidautoupdate/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <service android:name=".download.DownloadService" />
 
         <provider
-            android:name="androidx.core.content.FileProvider"
+            android:name=".DownloadFileProvider"
             android:authorities="${applicationId}.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
