--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation "com.squareup.okhttp3:okhttp:4.4.0"
     implementation 'com.google.android.material:material:1.0.0'
-    implementation project(path: ':androidautoupdate')
+    implementation 'com.github.chengamin:AndroidUpdate:1.0'
 }
